force-app/main/default/objects/Integration_Transaction_Log__c/Integration_Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Transaction Log</label>
    <nameField>
        <label>Integration Transaction Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>