force-app/main/default/objects/Integration_Transaction_Log__c/fields/Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Time__c</fullName>
    <label>Completion Date Time</label>
    <type>DateTime</type>
</CustomField>