force-app/main/default/objects/Integration_Transaction_Log__c/fields/Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Destination_Address__c</fullName>
    <label>Destination Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>