force-app/main/default/objects/Integration_Transaction_Log__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Log</label>
    <referenceTo>Error_Log__c</referenceTo>
    <relationshipLabel>Integration Transaction Logs</relationshipLabel>
    <relationshipName>Integration_Transaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>