force-app/main/default/objects/Integration_Transaction_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <label>Flow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>