force-app/main/default/objects/Integration_Transaction_Log__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>