force-app/main/default/objects/Integration_Transaction_Log__c/fields/Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_Time__c</fullName>
    <label>Received Date Time</label>
    <type>DateTime</type>
</CustomField>