force-app/main/default/objects/Integration_Transaction_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>MULE</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>fdm-salesforce-sap-sync-app</fullName>
            </value>
            <value>
                <fullName>fdm-salesforce-sap-sync-app-dev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>