force-app/main/default/objects/Integration_Transaction_Log__c/fields/Source_Address__c.field-meta.xml
<CustomField>
    <fullName>Source_Address__c</fullName>
    <label>Source Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>