force-app/main/default/objects/Integration_Transaction_Log__c/fields/Source_Payload__c.field-meta.xml
<CustomField>
    <fullName>Source_Payload__c</fullName>
    <label>Source Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>