force-app/main/default/objects/Integration_Transaction_Log__c/fields/Target_Payload__c.field-meta.xml
<CustomField>
    <fullName>Target_Payload__c</fullName>
    <label>Target Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>