force-app/main/default/objects/Integration_Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>Destination__c</columns>
    <columns>Destination_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>